--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -8,8 +8,40 @@
       },
       "source": [
         "# Assignment: Data Wrangling\n",
-        "## `! git clone https://github.com/DS3001/wrangling`\n",
-        "## Do Q2, and one of Q1 or Q3."
+        "### `! git clone https://github.com/ds4e/wrangling`\n",
+        "### Do Q2, and one of Q1 or Q3."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "da879ea7-8aac-48a3-b6c2-daea56d2e072",
+      "metadata": {
+        "id": "da879ea7-8aac-48a3-b6c2-daea56d2e072"
+      },
+      "source": [
+        "**Q1.** This question provides some practice cleaning variables which have common problems.\n",
+        "1. Numeric variable: For `./data/airbnb_hw.csv`, clean the `Price` variable as well as you can, and explain the choices you make. How many missing values do you end up with? (Hint: What happens to the formatting when a price goes over 999 dollars, say from 675 to 1,112?)\n",
+        "2. Categorical variable: For the Minnesota police use of for data, `./data/mn_police_use_of_force.csv`, clean the `subject_injury` variable, handling the NA's; this gives a value `Yes` when a person was injured by police, and `No` when no injury occurred. What proportion of the values are missing? Is this a concern? Cross-tabulate your cleaned `subject_injury` variable with the `force_type` variable. Are there any patterns regarding when the data are missing? \n",
+        "3. Dummy variable: For the pretrial data covered in the lecture, clean the `WhetherDefendantWasReleasedPretrial` variable as well as you can, and, in particular, replace missing values with `np.nan`.\n",
+        "4. Missing values, not at random: For the pretrial data covered in the lecture, clean the `ImposedSentenceAllChargeInContactEvent` variable as well as you can, and explain the choices you make. (Hint: Look at the `SentenceTypeAllChargesAtConvictionInContactEvent` variable.)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5a60a44e",
+      "metadata": {},
+      "source": [
+        "**Q2.** Go to https://sharkattackfile.net/ and download their dataset on shark attacks.\n",
+        "\n",
+        "1. Open the shark attack file using Pandas. It is probably not a csv file, so `read_csv` won't work.\n",
+        "2. Drop any columns that do not contain data.\n",
+        "3. Clean the year variable. Describe the range of values you see. Filter the rows to focus on attacks since 1940. Are attacks increasing, decreasing, or remaining constant over time?\n",
+        "4. Clean the Age variable and make a histogram of the ages of the victims.\n",
+        "5. What proportion of victims are male?\n",
+        "6. Clean the `Type` variable so it only takes three values: Provoked and Unprovoked and Unknown. What proportion of attacks are unprovoked?\n",
+        "7. Clean the `Fatal Y/N` variable so it only takes three values: Y, N, and Unknown.\n",
+        "8. Are sharks more likely to launch unprovoked attacks on men or women? Is the attack more or less likely to be fatal when the attack is provoked or unprovoked? Is it more or less likely to be fatal when the victim is male or female? How do you feel about sharks?\n",
+        "9. What proportion of attacks appear to be by white sharks? (Hint: `str.split()` makes a vector of text values into a list of lists, split by spaces.)"
       ]
     },
     {
@@ -19,7 +51,7 @@
         "id": "5735a4d4-8be8-433a-a351-70eb8002e632"
       },
       "source": [
-        "**Q1.** Open the \"tidy_data.pdf\" document in the repo, which is a paper called Tidy Data by Hadley Wickham.\n",
+        "**Q3.** Open the \"tidy_data.pdf\" document in the repo, which is a paper called Tidy Data by Hadley Wickham.\n",
         "\n",
         "  1. Read the abstract. What is this paper about?\n",
         "  2. Read the introduction. What is the \"tidy data standard\" intended to accomplish?\n",
@@ -33,26 +65,12 @@
     },
     {
       "cell_type": "markdown",
-      "id": "da879ea7-8aac-48a3-b6c2-daea56d2e072",
-      "metadata": {
-        "id": "da879ea7-8aac-48a3-b6c2-daea56d2e072"
-      },
-      "source": [
-        "**Q2.** This question provides some practice cleaning variables which have common problems.\n",
-        "1. Numeric variable: For `./data/airbnb_hw.csv`, clean the `Price` variable as well as you can, and explain the choices you make. How many missing values do you end up with? (Hint: What happens to the formatting when a price goes over 999 dollars, say from 675 to 1,112?)\n",
-        "2. Categorical variable: For the `./data/sharks.csv` data covered in the lecture, clean the \"Type\" variable as well as you can, and explain the choices you make.\n",
-        "3. Dummy variable: For the pretrial data covered in the lecture, clean the `WhetherDefendantWasReleasedPretrial` variable as well as you can, and, in particular, replace missing values with `np.nan`.\n",
-        "4. Missing values, not at random: For the pretrial data covered in the lecture, clean the `ImposedSentenceAllChargeInContactEvent` variable as well as you can, and explain the choices you make. (Hint: Look at the `SentenceTypeAllChargesAtConvictionInContactEvent` variable.)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "649494cd-cfd6-4f80-992a-9994fc19e1d5",
       "metadata": {
         "id": "649494cd-cfd6-4f80-992a-9994fc19e1d5"
       },
       "source": [
-        "**Q3.** Many important datasets contain a race variable, typically limited to a handful of values often including Black, White, Asian, Latino, and Indigenous. This question looks at data gathering efforts on this variable by the U.S. Federal government.\n",
+        "**Q4.** Many important datasets contain a race variable, typically limited to a handful of values often including Black, White, Asian, Latino, and Indigenous. This question looks at data gathering efforts on this variable by the U.S. Federal government.\n",
         "\n",
         "1. How did the most recent US Census gather data on race?\n",
         "2. Why do we gather these data? What role do these kinds of data play in politics and society? Why does data quality matter?\n",
