Add data citation

--- a/wrangling.ipynb
+++ b/wrangling.ipynb
@@ -102,6 +102,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e5d3a9f",
+   "metadata": {},
+   "source": [
+    "## Citing Data\n",
+    "- Whenever you use data, you should cite it:\n",
+    "    - Author or Creator: Who or what organization created these data?\n",
+    "    - Date of Publication: When was the data made available?\n",
+    "    - Title: What is the name of the dataset?\n",
+    "    - Electronic Location or Identifier: Where is a persistent location where the data are available? Is there a DOI or orchid or other unique identifier?\n",
+    "- We should do a better job of this"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f6ddcdfd-a5d0-4ee8-b954-7c19754fe9dd",
    "metadata": {
     "id": "f6ddcdfd-a5d0-4ee8-b954-7c19754fe9dd",
